# logisedge

./: .eslintignore  ADD_NEW_PAYMENT_SOURCES.md  AUTO_TASK_SCHEDULER_README.md  BACKUP_SCHEDULER_README.md  CRON_JOB_VIEWER_README.md  NAVIGATION_DROPDOWN_FIX_SUMMARY.md  PAYMENT_SOURCE_ENHANCEMENT_README.md  PAYMENT_SOURCE_PAGE_REFRESH_SUMMARY.md  PAYMENT_SOURCE_README.md  PAYMENT_SOURCE_UPDATE_SUMMARY.md  Procfile  SIGNATURE_UPLOADER_README.md  create_fiscal_year.py  create_supplier_bill_for_vendor.py  gunicorn.conf.py  manage.py  move_remaining_templates.ps1  move_static_files.ps1  move_templates.ps1  pending_bills_investigation_report.md  pyproject.toml  render.yaml  requirements.txt  requirements_auto_task_scheduler.txt  requirements_cron_job_viewer.txt  requirements_signature_uploader.txt  run_backup_scheduler.bat  run_backup_scheduler.ps1
accounts/: urls.py  views.py
accounts_receivable_aging/: apps.py  forms.py  models.py  urls.py  views.py
activity_logs/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
adjustment_entry/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
all_transactions/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
approval_workflow/: README.md  __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
asset_movement_log/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
asset_register/: admin.py  forms.py  models.py  urls.py  views.py
attendance/: forms.py  models.py  urls.py  views.py
auto_task_scheduler/: admin.py  apps.py  celery.py  models.py  serializers.py  tasks.py  urls.py  views.py
backup_scheduler/: admin.py  apps.py  forms.py  models.py  restore_forms.py  restore_models.py  restore_views.py  urls.py  views.py
balance_sheet/: admin.py  apps.py  forms.py  models.py  urls.py  (+1 more)
(+2023 files in other folders)
