[tool.poetry]
name = "logisedge"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
djangorestframework = "^3.12"
asgiref = "^3.8"
pytz = "^2025.2"
sqlparse = "^0.5.3"

# Remove this entire section if your project does not require it:
#[tool.poetry.packages]
#  [[tool.poetry.packages]]
#  include = "logisedge"
#  from = "logisedge"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
