[tool.poetry]
name = "logisedge"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
djangorestframework = "^3.12"
asgiref = "^3.8"
pytz = "^2025.2"
sqlparse = "^0.5.3"

# No packages section needed for Django project

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
