[tool.poetry]
name = "logisedge"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
djangorestframework = "^3.15"
asgiref = "^3.8"
pytz = "^2025.2"
sqlparse = "^0.5.3"
gunicorn = "^20.1.0"
django-widget-tweaks = "^1.5.0"
django-celery-beat = "^2.5.0"
qrcode = "^7.4.2"
Pillow = "^10.0.0"
python-barcode = "^0.15.1"
croniter = "^1.4.0"
weasyprint = "^60.0"
PyPDF2 = "^3.0.1"
xhtml2pdf = "^0.2.17"
xlsxwriter = "^3.1.0"

# No packages section needed for Django project

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
